--- a/README
+++ b/README
@@ -8,7 +8,7 @@ You need to grab Prince from this page: http://www.princexml.com/download/
 
 against the saved HTML from the rendered articles, which will do the job.
 
-Right now the CSS is configured for Lulu's 6x9 article, and is mainly sans-serif style. Feel free to change it, I'd love to have some options...
+Right now the CSS is configured for Lulu's 6x9 book style, and is mainly sans-serif style. Feel free to change it, I'd love to have some options...
 
 The delicious details on the front page are for retagging the posts (I'm still using the RSS for pulling content down as it means instapaper feeds will still work...). It'll retag them to 'imadeabook' for now, might add that as a config field, but I quite like having a bit of a common *thing*.
 
